# mini_ecommerce_microservice

./: .env.example  .gitignore  README.md  Taskfile.yaml  mini-ecommerce-production-template-plan.md  postman_collection.json  postman_environment.json  pyproject.toml
.github/workflows/: ci.yml
apps/: __init__.py
apps/api_gateway/: Dockerfile  README.md
apps/auth_service/: Dockerfile  README.md
apps/cart_service/: Dockerfile  README.md  __init__.py
apps/order_service/: Dockerfile  README.md
apps/payment_service/: Dockerfile  README.md  alembic.ini
apps/product_service/: Dockerfile  README.md
docs/: api-contracts.md  architecture.md  ci.md  database-design.md  production-readiness.md  saga-flow.md  security.md  service-workflow.md  testing.md  wso2-local-setup.md
docs/adr/: 0001-service-folder-architecture.md
docs/architecture/: folder-structure.md  migration-plan.md  service-template.md
docs/database/: database-design.md  migrations.md
docs/observability/: observability.md
docs/runbooks/: k6.md  local-development.md  production-readiness.md  troubleshooting.md
docs/saga/: saga-flow.md
docs/security/: security.md  wso2-local-setup.md
infra/: docker-compose.minio.yml  docker-compose.yml
infra/otel/: otel-collector-config.yml
infra/postgres/: init-databases.sql  primary-init.sql  replica-init.sql
infra/prometheus/: prometheus.yml
infra/rabbitmq/: definitions.json
infra/valkey/: valkey.conf
infra/wso2/: README.md
scripts/: generate_certs.py  run_all_local.sh  run_api_gateway.sh  run_auth_service.sh  run_cart_service.sh  run_order_service.sh  run_payment_api_service.sh  run_payment_service.sh  run_product_service.sh
services/api_gateway/: main.py  requirements.txt  routes.py
services/cart_service/: main.py  repository.py  router.py  schemas.py  service.py
services/order_service/: cart_reader.py  consumers.py  main.py  models.py  repository.py  router.py  saga.py  schemas.py  service.py  state.py
services/payment_service/: consumers.py  main.py  models.py  repository.py  router.py  schemas.py  service.py
services/product_service/: main.py  repository.py  router.py  schemas.py  service.py
tests/: __init__.py
tests/e2e/: test_full_template_flow.py  test_login_checkout_flows.py  test_phase5_security.py
tests/integration/: test_order_saga_failed.py  test_order_saga_success.py  test_rabbitmq_events.py  test_valkey_cache.py
tests/load/: README.md  k6_ecommerce.js  phase6_runner.py  render_phase6_graph.py
tests/security/: security-report.md  test_gateway_security.py
tests/smoke/: test_health.py
tests/unit/: test_alembic_migrations.py  test_api_gateway.py  test_api_gateway_auth.py  test_api_gateway_swagger.py  (+16 more)
(+210 files in other folders)
