[project]
name = "mini-ecommerce-microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.6.2",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=48.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "faststream[rabbit]>=0.6.7",
    "httpx>=0.28.1",
    "opentelemetry-api>=1.42.0",
    "opentelemetry-exporter-otlp>=1.42.0",
    "opentelemetry-instrumentation-fastapi>=0.63b0",
    "opentelemetry-sdk>=1.42.0",
    "orjson>=3.11.9",
    "prometheus-client>=0.25.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.47.0",
    "valkey>=6.1.1",
]
