[project]
name = "mini-ecommerce-microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.6.2",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=48.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "faststream[rabbit]>=0.6.7",
    "httpx>=0.28.1",
    "opentelemetry-api>=1.42.0",
    "opentelemetry-exporter-otlp>=1.42.0",
    "opentelemetry-instrumentation-fastapi>=0.63b0",
    "opentelemetry-sdk>=1.42.0",
    "orjson>=3.11.9",
    "prometheus-client>=0.25.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.47.0",
    "valkey>=6.1.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.5.20",
    "cffi==2.0.0",
    "click==8.4.0",
    "colorama==0.4.6",
    "ecdsa==0.19.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "idna==3.15",
    "pyasn1==0.6.3",
    "pycparser==3.0",
    "pydantic_core==2.46.4",
    "python-jose==3.5.0",
    "rsa==4.9.1",
    "six==1.17.0",
    "starlette==1.0.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "ruff>=0.15.14",
    "pandas>=3.0.3",
    "matplotlib>=3.10.9",
    "tabulate>=0.9.0",
    "boto3>=1.43.18",
    "pillow>=12.2.0",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = ["."]
[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
